--- a/app/src/main/res/layout/items_layout.xml
+++ b/app/src/main/res/layout/items_layout.xml
@@ -2,14 +2,72 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="horizontal"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="wrap_content">
+
     <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="165dp"
+        android:layout_width="50dp"
+        android:layout_height="80dp"
         android:orientation="horizontal">
 
+        <View
+            android:layout_gravity="center_vertical"
+            android:id="@+id/newNoticeDot"
+            android:layout_margin="10dp"
+            android:layout_width="6dp"
+            android:layout_height="6dp"
+            android:background="@drawable/point"
+            android:visibility="invisible"
+            />
 
+        <TextView
+            android:id="@+id/NoticeIDTextview"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical"
 
+            android:textSize="15sp" />
     </LinearLayout>
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="80dp"
+        android:orientation="vertical">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="30dp"
+            android:orientation="horizontal">
+            <TextView
+                android:id="@+id/NoticeTitleTextview"
+                android:layout_width="280dp"
+                android:layout_height="match_parent"
+                android:maxLines="1"
+                android:maxWidth="280dp"
+                android:ellipsize="end"
+                android:textStyle="bold"
+                android:textSize="20sp"
+                />
+            <TextView
+                android:id="@+id/NoticeTimeTextView"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:textColor="#888888"
+                android:textSize="15sp"
+                android:gravity="center_vertical|end"
+                />
+        </LinearLayout>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="horizontal">
+            <TextView
+                android:id="@+id/NoticePartBodyTextview"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:paddingTop="5dp"
+                android:maxLines="2"
+                android:ellipsize="end"
+                />
+        </LinearLayout>
+    </LinearLayout>
 </LinearLayout>
