--- a/app/src/main/res/layout/fragment_notices_today.xml
+++ b/app/src/main/res/layout/fragment_notices_today.xml
@@ -3,11 +3,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:paddingLeft="20dp"
-    android:paddingRight="20dp"
     android:orientation="vertical"
-    android:background="#ffffff">
+    android:background="#ffffff"
+    >
 
     <androidx.appcompat.widget.SearchView
         android:layout_margin="10dp"
@@ -17,10 +15,11 @@
         android:paddingStart="5dp"
         android:background="@drawable/search_bar"
         android:queryBackground="@drawable/search_bar"
-        app:submitBackground="@drawable/search_bar"
         />
 
     <androidx.recyclerview.widget.RecyclerView
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp"
         android:id="@+id/TodayNoticeRecyclerView"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
