--- a/app/src/main/res/layout/fragment_all_notices.xml
+++ b/app/src/main/res/layout/fragment_all_notices.xml
@@ -4,8 +4,6 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:paddingLeft="20dp"
-    android:paddingRight="20dp"
     android:background="#ffffff"
     >
 
@@ -20,6 +18,8 @@
         />
 
     <androidx.recyclerview.widget.RecyclerView
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp"
         android:id="@+id/AllNoticeRecyclerView"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
