--- a/app/src/main/res/layout/items_layout.xml
+++ b/app/src/main/res/layout/items_layout.xml
@@ -2,17 +2,18 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="horizontal"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:layout_marginTop="20dp"
+    >
 
     <LinearLayout
-        android:layout_width="50dp"
+        android:layout_width="30dp"
         android:layout_height="80dp"
         android:orientation="horizontal">
 
         <View
             android:layout_gravity="center_vertical"
             android:id="@+id/newNoticeDot"
-            android:layout_margin="10dp"
             android:layout_width="6dp"
             android:layout_height="6dp"
             android:background="@drawable/point"
@@ -21,11 +22,11 @@
 
         <TextView
             android:id="@+id/NoticeNumberTextview"
+            android:textColor="#000000"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
-
-            android:textSize="15sp" />
+            android:textSize="13sp" />
     </LinearLayout>
 
     <LinearLayout
@@ -35,24 +36,26 @@
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="30dp"
-            android:orientation="horizontal">
+            android:layout_height="25dp"
+            android:orientation="horizontal"
+            >
             <TextView
                 android:id="@+id/NoticeTitleTextview"
-                android:layout_width="260dp"
+                android:layout_width="250dp"
                 android:layout_height="match_parent"
+                android:textColor="#000000"
                 android:maxLines="1"
                 android:maxWidth="280dp"
                 android:ellipsize="end"
                 android:textStyle="bold"
-                android:textSize="20sp"
+                android:textSize="17sp"
                 />
             <TextView
                 android:id="@+id/NoticeTimeTextView"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:textColor="#888888"
-                android:textSize="15sp"
+                android:textSize="13sp"
                 android:gravity="center_vertical|end"
                 />
         </LinearLayout>
@@ -64,8 +67,8 @@
                 android:id="@+id/NoticePartBodyTextview"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:paddingTop="5dp"
-                android:maxLines="2"
+                android:textColor="#000000"
+                android:maxLines="3"
                 android:ellipsize="end"
                 />
         </LinearLayout>
