--- a/app/src/main/res/layout/activity_detials.xml
+++ b/app/src/main/res/layout/activity_detials.xml
@@ -19,12 +19,12 @@
             android:orientation="horizontal">
 
             <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="50dp"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
                 android:orientation="horizontal">
 
                 <ImageButton
-                    android:id="@+id/SettingBack"
+                    android:id="@+id/BackUP"
                     android:layout_width="40dp"
                     android:layout_height="match_parent"
                     android:background="#ffffff"
@@ -41,71 +41,62 @@
                     android:textStyle="bold" />
 
                 <ImageButton
+                    android:id="@+id/Share"
                     android:layout_width="40dp"
                     android:layout_height="match_parent"
                     android:layout_gravity="center"
                     android:layout_marginLeft="100dp"
                     android:background="#ffffff"
-                    android:src="@drawable/share_icon" />
+                    android:src="@drawable/more_icon" />
             </LinearLayout>
         </LinearLayout>
         <TextView
+            android:id="@+id/DetailIDTextview"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textColor="#262626"
-            android:text="1145"
-            android:gravity="center"/>
+            android:text=""
+            android:gravity="center" />
     </LinearLayout>
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
         android:paddingLeft="20dp"
-        android:paddingRight="20dp"
-        >
+        android:paddingRight="20dp">
 
         <TextView
-            android:id="@+id/NoticeTitleTextview"
+            android:id="@+id/DetailTitleTextview"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
-            android:text="哈尔滨职业技术学院2023年迎新XXXXXXXXX"
+            android:textStyle="bold"
             android:textColor="#000000"
-            android:textSize="23sp"
+            android:textSize="23sp" />
 
-            />
         <TextView
-            android:id="@+id/NoticeDateTextview"
+            android:id="@+id/DetailDateTextview"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="2023年5月5日"
             android:gravity="end"
             android:textColor="#888888"
-            android:textSize="18sp" />
-        <LinearLayout
+            android:textSize="16sp" />
+
+        <ScrollView
+            android:layout_marginTop="10dp"
+            android:id="@+id/scrollView2"
             android:layout_width="match_parent"
-            android:layout_height="490dp"
-            android:orientation="vertical">
-            <ScrollView
-                android:id="@+id/scrollView2"
+            android:layout_height="0dp"
+            android:layout_weight="1">
+
+            <LinearLayout
+                android:id="@+id/body_layout"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_below="@+id/textView5">
+                android:layout_height="wrap_content"
+                android:orientation="vertical">
 
-                <TextView
-                    android:id="@+id/NoticeBodyTextview"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="@{data.body}"
-                    android:textSize="18sp" />
-            </ScrollView>
-        </LinearLayout>
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="vertical">
-
-        </LinearLayout>
-
+            </LinearLayout>
+        </ScrollView>
     </LinearLayout>
 </LinearLayout>
